--- a/index.html
+++ b/index.html
@@ -8,7 +8,44 @@
 </head>
 <body>
 
-    <h1>Calculator</h1>
+    <div class="calculator">
+        <div class="display"></div>
+        <div class="keypad">
+            <div class="firstRow">
+                <button id="AC">AC</button>
+                <button id="DEL">DEL</button>
+            </div>
+
+            <div class="otherRows">
+                <button id="seven" class="numericKeys">7</button>
+                <button id="eight" class="numericKeys">8</button>
+                <button id="nine" class="numericKeys">9</button>
+                <button id="divide" class="operators">/</button>
+            </div>
+
+            <div class="otherRows">
+                <button id="four" class="numericKeys">4</button>
+                <button id="five" class="numericKeys">5</button>
+                <button id="six" class="numericKeys">6</button>
+                <button id="multiply" class="operators">x</button>
+            </div>
+
+
+            <div class="otherRows">
+                <button id="one" class="numericKeys">1</button>
+                <button id="two" class="numericKeys">2</button>
+                <button id="three" class="numericKeys">3</button>
+                <button id="minus" class="operators">-</button>
+            </div>
+
+            <div class="otherRows">
+                <button id="decimal" class="numericKeys">.</button>
+                <button id="zero" class="numericKeys">0</button>
+                <button id="equal" class="numericKeys">=</button>
+                <button id="plus" class="operators">+</button>
+            </div>
+        </div>
+    </div>
 
     <script src=".\calculator.js"></script>
 
