--- a/index.html
+++ b/index.html
@@ -9,40 +9,40 @@
 <body>
 
     <div class="calculator">
-        <div class="display"></div>
+        <div id="display">0</div>
         <div class="keypad">
             <div class="firstRow">
-                <button id="AC">AC</button>
-                <button id="DEL">DEL</button>
+                <button id="AC" class="topKeys" class="key">AC</button>
+                <!-- <button id="DEL" class="topKeys">DEL</button> -->
             </div>
 
             <div class="otherRows">
-                <button id="seven" class="numericKeys">7</button>
-                <button id="eight" class="numericKeys">8</button>
-                <button id="nine" class="numericKeys">9</button>
-                <button id="divide" class="operators">/</button>
+                <button id="seven" class="numericKeys" class="key">7</button>
+                <button id="eight" class="numericKeys" class="key">8</button>
+                <button id="nine" class="numericKeys"class="key">9</button>
+                <button id="divide" class="operators"class="key">/</button>
             </div>
 
             <div class="otherRows">
-                <button id="four" class="numericKeys">4</button>
-                <button id="five" class="numericKeys">5</button>
-                <button id="six" class="numericKeys">6</button>
-                <button id="multiply" class="operators">x</button>
+                <button id="four" class="numericKeys" class="key">4</button>
+                <button id="five" class="numericKeys" class="key">5</button>
+                <button id="six" class="numericKeys" class="key">6</button>
+                <button id="multiply" class="operators" class="key">*</button>
             </div>
 
 
             <div class="otherRows">
-                <button id="one" class="numericKeys">1</button>
-                <button id="two" class="numericKeys">2</button>
-                <button id="three" class="numericKeys">3</button>
-                <button id="minus" class="operators">-</button>
+                <button id="one" class="numericKeys" class="key">1</button>
+                <button id="two" class="numericKeys" class="key">2</button>
+                <button id="three" class="numericKeys" class="key">3</button>
+                <button id="minus" class="operators" class="key">-</button>
             </div>
 
             <div class="otherRows">
-                <button id="decimal" class="numericKeys">.</button>
-                <button id="zero" class="numericKeys">0</button>
-                <button id="equal" class="numericKeys">=</button>
-                <button id="plus" class="operators">+</button>
+                <button id="decimal" class="numericKeys" class="key">.</button>
+                <button id="zero" class="numericKeys" class="key">0</button>
+                <button id="equal" class="operators" class="key">=</button>
+                <button id="plus" class="operators" class="key">+</button>
             </div>
         </div>
     </div>
