--- a/index.html
+++ b/index.html
@@ -17,32 +17,32 @@
             </div>
 
             <div class="otherRows">
-                <button id="seven" class="numericKeys" class="key">7</button>
-                <button id="eight" class="numericKeys" class="key">8</button>
-                <button id="nine" class="numericKeys"class="key">9</button>
-                <button id="divide" class="operators"class="key">/</button>
+                <button class="numericKeys" class="key">7</button>
+                <button class="numericKeys" class="key">8</button>
+                <button class="numericKeys"class="key">9</button>
+                <button class="operators"class="key">/</button>
             </div>
 
             <div class="otherRows">
-                <button id="four" class="numericKeys" class="key">4</button>
-                <button id="five" class="numericKeys" class="key">5</button>
-                <button id="six" class="numericKeys" class="key">6</button>
-                <button id="multiply" class="operators" class="key">*</button>
+                <button class="numericKeys" class="key">4</button>
+                <button class="numericKeys" class="key">5</button>
+                <button class="numericKeys" class="key">6</button>
+                <button class="operators" class="key">*</button>
             </div>
 
 
             <div class="otherRows">
-                <button id="one" class="numericKeys" class="key">1</button>
-                <button id="two" class="numericKeys" class="key">2</button>
-                <button id="three" class="numericKeys" class="key">3</button>
-                <button id="minus" class="operators" class="key">-</button>
+                <button class="numericKeys" class="key">1</button>
+                <button class="numericKeys" class="key">2</button>
+                <button class="numericKeys" class="key">3</button>
+                <button class="operators" class="key">-</button>
             </div>
 
             <div class="otherRows">
-                <button id="decimal" class="numericKeys" class="key">.</button>
-                <button id="zero" class="numericKeys" class="key">0</button>
-                <button id="equal" class="operators" class="key">=</button>
-                <button id="plus" class="operators" class="key">+</button>
+                <button class="numericKeys" class="key">.</button>
+                <button class="numericKeys" class="key">0</button>
+                <button class="operators" class="key">=</button>
+                <button class="operators" class="key">+</button>
             </div>
         </div>
     </div>
